--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -1,9 +1,11 @@
-version: "2"
-sql:
-  - engine: "postgresql"
-    queries: "./db/query/account.sql/"
-    schema: "./db/migration"
-    gen:
-      go:
-        package: "db"
-        out: "./db/sqlc"
+version: "1"
+packages:
+  - name: "db"
+    path: "./db/sqlc"
+    queries: "./db/query/"
+    schema: "./db/migration/"
+    engine: "postgresql"
+    emit_json_tags: true
+    emit_prepared_queries: false
+    emit_interface: false
+    emit_exact_table_names: false
