--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,9 @@ jobs:
         go-version: 1.19
       id: go
 
+    - name: go migrate cli command
+      run : curl -L https://github.com/golang-migrate/migrate/releases/download/$version/migrate.$os-$arch.tar.gz | tar xvz
+
     - name: database migration
       run: make migrateup
 
