--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,8 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+        ports:
+          - 5433:5432
 
     steps:
     - name: Check out code into the Go module repository
@@ -39,7 +41,7 @@ jobs:
         go-version: 1.19
       id: go
 
-    - name: intall golang-migrate command
+    - name: install golang-migrate command
       run : | 
         curl -L https://github.com/golang-migrate/migrate/releases/download/v4.15.2/migrate.linux-amd64.tar.gz | tar xvz
         sudo mv migrate /usr/bin/migrate
