--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,9 +3,9 @@ services:
   postgres:
    image: postgres:15.2-alpine
    environment:
-      - POSTGRES_USER = root
-      - POSTGRES_PASSWORD= secret
-      - POSTGRES_DB= simple_bank
+      - POSTGRES_USER=root
+      - POSTGRES_PASSWORD=secret
+      - POSTGRES_DB=simple_bank
   api:
       build:
         context: .
@@ -13,12 +13,10 @@ services:
       ports:
         - "8081:8080"
       environment: 
-        - DB_SOURCE=postgresql://root:secret@postgres:5433/simple_bank?sslmode=disable
+        - DB_SOURCE=postgresql://root:secret@postgres:5432/simple_bank?sslmode=disable
       depends_on:
         - postgres
       entrypoint: [
-        "/app/wait-for.sh", "postgres:5433", "--", "/app/start.sh"
+        "/app/wait-for.sh", "postgres:5432", "--", "/app/start.sh"
       ]
-      command: [
-        "/app/main"
-      ]
+      command: [ "/app/main" ]
